# A_django_junie_test

./: .gitignore  README.md  pyproject.toml  pytest.ini  test_parallel.py  update_entries.py
.junie/: guidelines.md
A_django_junie_test/: asgi.py  settings.py  urls.py  wsgi.py
code_diary/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
code_diary/migrations/: 0001_initial.py  0002_diaryentry_user_userprofile.py  0003_alter_diaryentry_user.py  0004_readentry_diaryentry_readers.py
code_diary/templates/code_diary/: base.html  entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html  followers_list.html  following_list.html  home.html  user_entries.html  user_list.html
code_diary/templates/code_diary/auth/: login.html  logout.html  signup.html
core/: settings.py  urls.py  wsgi.py
ui_tests/: conftest.py  test_cleanup.py  test_ui.py
