[project]
name = "a-django-junie-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.5.0",
    "playwright>=1.42.0",
    "pytest-playwright>=0.4.0",
]
